--- a/graphics.cabal
+++ b/graphics.cabal
@@ -1,7 +1,7 @@
 name:                graphics
 version:             0.1.0.0
-synopsis:            Initial project template from stack
-description:         Please see README.md
+synopsis:            Graphics library for MCS66C
+description:         Graphics library for MCS66C
 homepage:            http://github.com/jbaum98/graphics#readme
 license:             BSD3
 license-file:        LICENSE
