--- a/graphics.cabal
+++ b/graphics.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Line, Pbm, Picture, Pixel, Point, Pair
+  exposed-modules:     Line, Pbm, Picture, Color, Point, Pair
   build-depends:       base >= 4.7 && < 5, containers, bytestring
   default-language:    Haskell2010
 
