--- a/graphics.cabal
+++ b/graphics.cabal
@@ -22,7 +22,7 @@ library
 executable graphics-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , graphics
   default-language:    Haskell2010
@@ -33,8 +33,19 @@ test-suite graphics-test
   main-is:             Spec.hs
   build-depends:       base
                      , graphics
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
+
+benchmark graphics-benchmark
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      app, bench
+  main-is:             Bench.hs
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , graphics
+                     , criterion
+  default-language:    Haskell2010
+
 
 source-repository head
   type:     git
