--- a/graphics.cabal
+++ b/graphics.cabal
@@ -25,6 +25,7 @@ executable graphics-exe
   ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -H200m"
   build-depends:       base
                      , graphics
+  other-modules:       GenerateFile
   default-language:    Haskell2010
 
 test-suite graphics-test
@@ -44,6 +45,7 @@ benchmark graphics-benchmark
   build-depends:       base
                      , graphics
                      , criterion
+  other-modules:       GenerateFile
   default-language:    Haskell2010
 
 
