--- a/graphics.cabal
+++ b/graphics.cabal
@@ -16,13 +16,13 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Line, Pbm, Picture, Color, Point, Pair
-  build-depends:       base >= 4.7 && < 5, containers, bytestring
+  build-depends:       base >= 4.7 && < 5, containers, bytestring, vector, primitive
   default-language:    Haskell2010
 
 executable graphics-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -H200m"
+  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"
   build-depends:       base
                      , graphics
   other-modules:       GenerateFile
@@ -34,14 +34,14 @@ test-suite graphics-test
   main-is:             Spec.hs
   build-depends:       base
                      , graphics
-  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -H200m"
+  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"
   default-language:    Haskell2010
 
 benchmark graphics-benchmark
   type:                exitcode-stdio-1.0
   hs-source-dirs:      app, bench
   main-is:             Bench.hs
-  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -H200m"
+  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"
   build-depends:       base
                      , graphics
                      , criterion
