--- a/graphics.cabal
+++ b/graphics.cabal
@@ -15,8 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Line, Pbm, Picture, Color, Point, Pair
-  build-depends:       base >= 4.7 && < 5, containers, bytestring, vector, primitive, deepseq
+  exposed-modules:     Line, Pbm, Picture, Color, Point, Pair, Utils
+  build-depends:       base >= 4.7 && < 5, containers, bytestring, deepseq, repa
   default-language:    Haskell2010
 
 executable graphics-exe
