--- a/graphics.cabal
+++ b/graphics.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Line, Pbm, Picture, Color, Point, Pair, Utils
-  build-depends:       base >= 4.7 && < 5, containers, bytestring, deepseq, repa
+  build-depends:       base >= 4.7 && < 5, containers, bytestring, deepseq, array, primitive
   default-language:    Haskell2010
 
 executable graphics-exe
