--- a/graphics.cabal
+++ b/graphics.cabal
@@ -22,7 +22,7 @@ library
 executable graphics-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"
+  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -c -H50M"
   build-depends:       base
                      , graphics
   other-modules:       GenerateFile
@@ -34,14 +34,14 @@ test-suite graphics-test
   main-is:             Spec.hs
   build-depends:       base
                      , graphics
-  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"
+  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -c -H50M"
   default-language:    Haskell2010
 
 benchmark graphics-benchmark
   type:                exitcode-stdio-1.0
   hs-source-dirs:      app, bench
   main-is:             Bench.hs
-  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"
+  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -c -H50M"
   build-depends:       base
                      , graphics
                      , criterion
