--- a/graphics.cabal
+++ b/graphics.cabal
@@ -15,13 +15,15 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix
-  build-depends:       base >= 4.7 && < 5, containers, bytestring, deepseq, array, primitive, repa
+  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Parser
+  build-depends:       base >= 4.7 && < 5, containers, bytestring, deepseq, array, primitive, repa, attoparsec, mtl, process
   other-modules:       Matrix.Base
                        Matrix.Mult
                        Matrix.Transform
                        Matrix.EdgeMatrix
                        Matrix.D3Point
+                       Parser.Parser
+                       Parser.Interp
   default-language:    Haskell2010
 
 executable graphics-exe
