Fix bug with writing to the stdin pipe of convert
Before there were problems with the futexes and
EAGAIN. Not quite sure why this works, but I think
it's because we wait for the end of the process now.

--- a/graphics.cabal
+++ b/graphics.cabal
@@ -24,6 +24,7 @@ library
                        Matrix.D3Point
                        Parser.Parser
                        Parser.Interp
+                       Angle
   default-language:    Haskell2010
 
 executable graphics-exe
