Add Bezier and Hermite curves
Also fix matrix multiplication to be much faster.
However, sometimes it causes repa to complain about nested parallelism,
which can be fixed by a bang for example at src/Parametric.hs:52

--- a/graphics.cabal
+++ b/graphics.cabal
@@ -25,6 +25,7 @@ library
                        Parser.Parser
                        Parser.Interp
                        Angle
+                       Parametric
   default-language:    Haskell2010
 
 executable graphics-exe
