--- a/graphics.cabal
+++ b/graphics.cabal
@@ -25,7 +25,7 @@ library
                        Parser.Parser
                        Parser.Interp
                        Angle
-                       Parametric
+                       Shapes
   default-language:    Haskell2010
 
 executable graphics-exe
