--- a/graphics.cabal
+++ b/graphics.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Parser
-  build-depends:       base >= 4.7 && < 5, containers, bytestring, deepseq, array, primitive, repa, attoparsec, mtl, process
+  build-depends:       base >= 4.7 && < 5, containers, bytestring, deepseq, array, primitive, repa, attoparsec, mtl, process, loop
   other-modules:       Matrix.Base
                        Matrix.Mult
                        Matrix.Transform
