--- a/graphics.cabal
+++ b/graphics.cabal
@@ -26,6 +26,7 @@ library
                        Parser.Interp
                        Angle
                        Shapes
+                       Vectors
   default-language:    Haskell2010
 
 executable graphics-exe
