--- a/graphics.cabal
+++ b/graphics.cabal
@@ -30,7 +30,7 @@ library
   other-modules:       Matrix.Base
                        Matrix.Mult
                        Matrix.Transform
-                       Matrix.Drawable
+                       Matrix.ShapeMatrix
                        Matrix.EdgeMatrix
                        Matrix.PointMatrix
                        Matrix.PolyMatrix
