--- a/graphics.cabal
+++ b/graphics.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Parser
+  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Parser, Forking
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5 && < 1
                      , bytestring >= 0.10 && < 1
