--- a/graphics.cabal
+++ b/graphics.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Parser, Forking
+  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Parser, Forking, MDL
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5 && < 1
                      , bytestring >= 0.10 && < 1
@@ -42,6 +42,7 @@ library
                        Pair.Pair
                        Pair.Vector
   default-language:    Haskell2010
+  build-tools: alex
 
 executable graphics-exe
   hs-source-dirs:      app
