--- a/graphics.cabal
+++ b/graphics.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Parser, Forking, MDL
+  exposed-modules:     Line, Pbm, Picture, Color, D2Point, Pair, Utils, Matrix, Parser, Forking, Language.MDL
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5 && < 1
                      , bytestring >= 0.10 && < 1
@@ -35,6 +35,10 @@ library
                        Matrix.PointMatrix
                        Matrix.PolyMatrix
                        Matrix.D3Point
+                       Language.MDL.Parser
+                       Language.MDL.Lexer
+                       Language.MDL.Tokens
+                       Language.MDL.Syntax
                        Parser.Parser
                        Parser.Interp
                        Angle
@@ -42,7 +46,7 @@ library
                        Pair.Pair
                        Pair.Vector
   default-language:    Haskell2010
-  build-tools: alex
+  build-tools: alex, happy
 
 executable graphics-exe
   hs-source-dirs:      app
