--- a/graphics.cabal
+++ b/graphics.cabal
@@ -27,6 +27,7 @@ library
                      , process >= 1.2 && < 2
                      , vector >= 0.11 && < 1
                      , loop >= 0.3 && < 1
+                     , dlist >= 0.7 && < 1
   other-modules:       Matrix.Base
                        Matrix.Mult
                        Matrix.Transform
