--- a/graphics.cabal
+++ b/graphics.cabal
@@ -45,6 +45,7 @@ library
                        Angle
                        Shapes
                        Pair.Pair
+                       Pair.Triple
                        Pair.Vector
   default-language:    Haskell2010
   build-tools: alex, happy
