--- a/graphics.cabal
+++ b/graphics.cabal
@@ -28,6 +28,8 @@ library
                      , vector >= 0.11 && < 1
                      , loop >= 0.3 && < 1
                      , dlist >= 0.7 && < 1
+                     , temporary >= 1.2 && < 2
+                     , filepath >= 1.4 && < 2
   other-modules:       Matrix.Base
                        Matrix.Mult
                        Matrix.Transform
