--- a/graphics.cabal
+++ b/graphics.cabal
@@ -60,8 +60,7 @@ library
 executable graphics-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -O2 -threaded -rtsopts
-                       -- "-with-rtsopts= -A8M -H4M"
+  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts= -N"
   build-depends:       base
                      , graphics
   default-language:    Haskell2010
