--- a/graphics.cabal
+++ b/graphics.cabal
@@ -32,6 +32,9 @@ library
                      , filepath >= 1.4 && < 2
                      , bytestring-read >= 0.3.1 && < 2
                      , time
+                     , directory
+                     , unix
+                     , MissingH
   other-modules:       Matrix.Base
                        Matrix.Mult
                        Matrix.Transform
@@ -62,11 +65,14 @@ library
 executable graphics-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts= -N"
+  ghc-options:         -O2 -threaded -rtsopts
   build-depends:       base
                      , graphics
                      , bytestring >= 0.10
                      , time
+                     , process
+                     , MissingH
+                     , unix
   default-language:    Haskell2010
 
 test-suite graphics-test
