--- a/graphics.cabal
+++ b/graphics.cabal
@@ -31,10 +31,8 @@ library
                      , temporary >= 1.2 && < 2
                      , filepath >= 1.4 && < 2
                      , bytestring-read >= 0.3.1 && < 2
-                     , time
                      , directory
-                     , unix
-                     , MissingH
+                     , unix >= 2.7 && < 3
   other-modules:       Matrix.Base
                        Matrix.Mult
                        Matrix.Transform
@@ -69,10 +67,6 @@ executable graphics-exe
   build-depends:       base
                      , graphics
                      , bytestring >= 0.10
-                     , time
-                     , process
-                     , MissingH
-                     , unix
   default-language:    Haskell2010
 
 test-suite graphics-test
