--- a/graphics.cabal
+++ b/graphics.cabal
@@ -31,6 +31,7 @@ library
                      , unix >= 2.7 && < 3
                      , ghc-prim >= 0.4 && < 1
                      , primitive >= 0.6 && < 1
+                     , stm >= 2.4 && < 3
   other-modules:       Data.Color
                        Data.D2Point
                        Data.D3Point
