--- a/graphics.cabal
+++ b/graphics.cabal
@@ -15,7 +15,28 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Language.MDL, Data.Color, Data.Matrix, Data.Pair, Data.Picture, Data.Picture.Drawing.Lighting, Data.Picture.Drawing.Line, Data.Picture.Drawing.Points, Data.Picture.Drawing.ScanLine, Data.Picture.Drawing.ShapeMatrix Data.Picture.Drawing.Shapes, Data.Picture.Gen, Data.Picture.Output, Data.Picture.Picture
+  exposed-modules:     Data.Color
+                       Data.Matrix
+                       Data.Pair
+                       Data.Picture
+                       Data.Picture.Drawing.Lighting
+                       Data.Picture.Drawing.Line
+                       Data.Picture.Drawing.Points
+                       Data.Picture.Drawing.ScanLine
+                       Data.Picture.Drawing.ShapeMatrix Data.Picture.Drawing.Shapes
+                       Data.Picture.Gen
+                       Data.Picture.Output
+                       Data.Picture.Picture
+                       Language.MDL
+                       Language.MDL.Expr
+                       Language.MDL.Interp
+                       Language.MDL.Interp.Eval
+                       Language.MDL.Interp.Interp
+                       Language.MDL.Interp.InterpState
+                       Language.MDL.Lexer
+                       Language.MDL.Parser
+                       Language.MDL.SymTab
+                       Language.MDL.Tokens
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5 && < 1
                      , bytestring >= 0.10 && < 1
@@ -44,15 +65,6 @@ library
                        Data.Picture.Drawing.ShapeMatrix.PointMatrix
                        Data.Picture.Drawing.ShapeMatrix.EdgeMatrix
                        Data.Picture.Output.Pbm
-                       Language.MDL.Expr
-                       Language.MDL.Interp
-                       Language.MDL.Interp.Eval
-                       Language.MDL.Interp.Interp
-                       Language.MDL.Interp.InterpState
-                       Language.MDL.Lexer
-                       Language.MDL.Parser
-                       Language.MDL.SymTab
-                       Language.MDL.Tokens
   default-language:    Haskell2010
   build-tools: alex, happy
 
